@@ -5,86 +5,69 @@ import com.example.edukate.dtos.coursedto.CourseDetailDto;
 import com.example.edukate.dtos.coursedto.CourseDto;
 import com.example.edukate.dtos.coursedto.CourseUpdateDto;
 import com.example.edukate.models.Course;
-import com.example.edukate.models.Instructor;
 import com.example.edukate.repositories.CourseRepository;
 import com.example.edukate.repositories.InstructorRepository;
 import com.example.edukate.service.CourseService;
+import jakarta.transaction.Transactional;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CourseServiceImpl implements CourseService {
+    private final InstructorRepository instructorRepository;
+    private final ModelMapper mapper;
+    private final CourseRepository courseRepository;
 
     @Autowired
-    private CourseRepository courseRepository;
-
-    @Autowired
-    private InstructorRepository instructorRepository;
-
-    @Autowired
-    private ModelMapper modelMapper;
+    public CourseServiceImpl(InstructorRepository instructorRepository, ModelMapper mapper, CourseRepository courseRepository) {
+        this.instructorRepository = instructorRepository;
+        this.mapper = mapper;
+        this.courseRepository = courseRepository;
+    }
 
     @Override
     public List<CourseDto> getCourses() {
         return courseRepository.findAll().stream()
                 .filter(course -> !course.isDeleted())
-                .map(course -> modelMapper.map(course, CourseDto.class))
-                .collect(Collectors.toList());
+                .map(course -> mapper.map(course,CourseDto.class))
+                .toList();
     }
 
     @Override
-    public List<CourseDto> getHomeCourses() {
-        return courseRepository.findAll().stream()
-                .filter(course -> !course.isDeleted())
-                .map(course -> modelMapper.map(course, CourseDto.class))
-                .limit(3)
-                .collect(Collectors.toList());
+    public CourseDto courseDto(Long id) {
+        Course course=courseRepository.findById(id).orElseThrow(RuntimeException::new);
+        CourseDto courseDto=mapper.map(course,CourseDto.class);
+        return courseDto;
     }
-
+//????
     @Override
-    public CourseDetailDto courseDetail(Long id) {
-        Course course = courseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Course not found"));
-        return modelMapper.map(course, CourseDetailDto.class);
-    }
-
-    @Override
+    @Transactional
     public void addCourse(CourseCreateDto courseCreateDto) {
-        Course course = modelMapper.map(courseCreateDto, Course.class);
-
-        if (courseCreateDto.getInstructorId() != null) {
-            Instructor instructor = instructorRepository.findById(courseCreateDto.getInstructorId())
-                    .orElseThrow(() -> new RuntimeException("Instructor not found"));
-            course.setInstructor(instructor);
-        }
-
-        courseRepository.save(course);
+        var instructorId=courseCreateDto.getInstructorId();
+        var instructor=instructorRepository.findById(instructorId).orElseThrow(RuntimeException::new);
+        courseRepository.save(mapper.map(courseCreateDto,Course.class));
+//?????
     }
 
     @Override
+    @Transactional
     public void updateCourse(Long id, CourseUpdateDto courseUpdateDto) {
-        Course course = courseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Course not found"));
+        Course course=courseRepository.findById(id).orElseThrow(RuntimeException::new);
+        var instructorId=courseUpdateDto.getInstructorId();
+        var instructor=instructorRepository.findById(instructorId).orElseThrow(RuntimeException::new);
 
-        modelMapper.map(courseUpdateDto, course);
+        courseUpdateDto.setId(id);
+        courseRepository.save(mapper.map(courseUpdateDto,Course.class));
 
-        if (courseUpdateDto.getInstructorId() != null) {
-            Instructor instructor = instructorRepository.findById(courseUpdateDto.getInstructorId())
-                    .orElseThrow(() -> new RuntimeException("Instructor not found"));
-            course.setInstructor(instructor);
-        }
-
-        courseRepository.save(course);
     }
 
     @Override
+    @Transactional
     public void deleteCourse(Long id) {
-        Course course = courseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Course not found"));
+        Course course=courseRepository.findById(id).orElseThrow(RuntimeException::new);
         course.setDeleted(true);
         courseRepository.save(course);
     }
